--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 .idea/modules.xml
 .idea/Php_framework.iml
 .idea/workspace.xml___jb_tmp___
+.idea/httpRequests/http-requests-log.http
+.idea/httpRequests/2018-03-24T095252.200.html
+.idea/httpRequests/2018-03-24T095233.200.html
+.idea/httpRequests/2018-03-24T095304.200.html
