--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "php": ">=7.1.0",
     "roave/security-advisories": "dev-master"
   },
-  "autoload": {
-    "psr-4": {
-      "Framework\\": "src/Framework/"
-    }
-  },
   "require-dev": {
     "phpunit/phpunit": "^7.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Framework\\": "src/Framework/",
+      "Tests\\": "tests/"
+    }
   }
+
 }
