--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
       "Framework\\": "src/Framework/",
       "Tests\\": "tests/"
     }
+  },
+  "scripts": {
+    "test": "phpunit --colors=always"
   }
-
 }
