--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,10 @@
   },
   "autoload": {
     "psr-4": {
+      "App\\": "src/App/",
       "Framework\\": "src/Framework/",
       "Tests\\": "tests/"
+
     }
   },
   "scripts": {
