--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,11 @@
   "require": {
     "php": ">=7.1.0",
     "aura/router": "^3.1",
-    "http-interop/http-middleware": "^0.5.0",
+    "http-interop/http-middleware": "0.4.1",
     "psr/http-message": "^1.0",
     "roave/security-advisories": "dev-master",
-    "zendframework/zend-diactoros": "^1.7"
+    "zendframework/zend-diactoros": "^1.7",
+    "zendframework/zend-stratigility": "2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0"
